Fixed alignment and styling for color-box dropdown

--- a/client/app/components/color-box.less
+++ b/client/app/components/color-box.less
@@ -1,11 +1,19 @@
+@import '../assets/less/inc/variables';
+
 color-box {
-  height: 16px !important;
-  display: inline-block !important;
-  overflow: hidden !important;
+  vertical-align: text-bottom;
+  display: inline;
+
   span {
     width: 12px !important;
     height: 12px !important;
     display: inline-block !important;
     margin-right: 5px;
+    vertical-align: middle;
+    border: 1px solid rgba(0,0,0,0.1);
   }
+   & ~ span {
+    vertical-align: bottom;
+    color: @input-color;
+   }
 }
